# arkanoid

./: .clang-format  .gitignore  CMakeLists.txt  README.md  arkanoid.c  audio.c  audio.h  config.h  delta_time.c  delta_time.h  entity.c  entity.h  graphics.c  graphics.h  levels.c  levels.h  score.c  score.h  text.c  text.h  textures.c  textures.h  vaus.c  vaus.h
.github/workflows/: cross-compile.yml
assets/: .gitignore
entities/: ball.c  ball.h  capsule.c  capsule.h  entities_spawner.c  entities_spawner.h  entities_structures.h  entity.c  entity.h
level_editor/: README.md  __main__.py  files.py  game_board.py  text.py  toolbar.py  visuals.py
levels/: 1.level  10.level  11.level  12.level  13.level  14.level  15.level  2.level  3.level  4.level  5.level  6.level  7.level  8.level  9.level
math/: collisions.c  collisions.h  math.c  math.h
src/: arkanoid.c  audio.c  audio.h  config.h  delta_time.h  graphics.c  levels.c  score.c  score.h  text.h  textures.c  textures.h  vaus.h
src/entities/: ball.c  capsule.h  entities_structures.h
src/math/: collisions.h  math.c
